--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -56,11 +56,11 @@
                     <p>Kategoriler</p>
                 </a>
             </li>
-            <li class="nav-item active">
-                <a href="tables.html">
+            <li class="nav-item">
+                <a href="/Product/Index">
                     <i class="la la-th"></i>
                     <p>Ürünler</p>
-                    <span class="badge badge-count">6</span>
+                 
                 </a>
             </li>
             <li class="nav-item">
@@ -81,48 +81,56 @@
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Mesajlar</p>
+                    <span class="badge badge-count">6</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>İndirimler</p>
+                    <span class="badge badge-count">6</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Öne Çıkanlar</p>
+                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Referanslar</p>
+                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Sosyal Medya</p>
+                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>İstatistikler</p>
+                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Ayarlar</p>
+                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Çıkış Yap</p>
+                    <span class="badge badge-count">0</span>
                 </a>
             </li>
         </ul>
