--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -7,7 +7,7 @@
             <div class="info">
                 <a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
                     <span>
-                        SignalR Yönetim Paneli
+                        Yönetim Paneli
                         <span class="user-level">Admin</span>
                         <span class="caret"></span>
                     </span>
@@ -64,17 +64,15 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="notifications.html">
+                <a href="/Booking/Index/">
                     <i class="la la-bell"></i>
                     <p>Rezervasyonlar</p>
-                    <span class="badge badge-success">3</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="typography.html">
+                <a href="/About/Index/">
                     <i class="la la-font"></i>
                     <p>Hakkımızda</p>
-                    <span class="badge badge-danger">25</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -85,31 +83,33 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/Discount/Index/">
                     <i class="la la-fonticons"></i>
                     <p>İndirimler</p>
-                    <span class="badge badge-count">6</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/Contact/Index/">
+                    <i class="la la-fonticons"></i>
+                    <p>İletişim</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Feature/Index/">
                     <i class="la la-fonticons"></i>
                     <p>Öne Çıkanlar</p>
-                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/Testimonial/Index/">
                     <i class="la la-fonticons"></i>
                     <p>Referanslar</p>
-                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="icons.html">
+                <a href="/SocialMedia/Index/">
                     <i class="la la-fonticons"></i>
                     <p>Sosyal Medya</p>
-                    <span class="badge badge-count">0</span>
                 </a>
             </li>
             <li class="nav-item">
