--- a/SignalRWebUI/Views/UILayout/Index.cshtml
+++ b/SignalRWebUI/Views/UILayout/Index.cshtml
@@ -7,7 +7,7 @@
 <html>
 @await Component.InvokeAsync("_UILayoutHeadComponentPartial")
 
-<body class="sub_page">
+<body>
 
     @await Component.InvokeAsync("_UILayoutNavbarComponentPartial")
     <!-- book section -->
