--- a/SignalRWebUI/Views/Baskets/Index.cshtml
+++ b/SignalRWebUI/Views/Baskets/Index.cshtml
@@ -2,6 +2,10 @@
 @{
     Layout = null;
     int count = 0;
+    decimal basketTotalPrice=0;
+    decimal basketTotalPriceWithTax=0;
+    decimal tax = 0;
+    decimal totalPrice = 0;
 }
 
 <!DOCTYPE html>
@@ -42,22 +46,21 @@
                     </thead>
                     @foreach (var item in Model)
                     {
-                    count++;
-                    <tbody class="align-middle">
-                        <tr>
-                            <td class="align-middle">@count</td>
-                            <td class="align-middle">@item.ProductName</td>
-                            <td class="align-middle">@item.Count</td>
-                            <td class="align-middle">@item.Price</td>
-                            <td class="align-middle">@item.TotalPrice</td>
-                            <td class="align-middle btn-delete">
-                                <button data-basketid="@item.BasketID"
-                                        id="btndeletebasketid" class="btn btn-sm btn-danger">
-                                    <i class="fa fa-times"></i>
-                                </button>
-                            </td>
-                        </tr>
-                    </tbody>
+                        basketTotalPrice = Model.Sum(x => x.Price);
+                        tax = basketTotalPrice * 10 / 100;
+                        basketTotalPriceWithTax = basketTotalPrice + tax;
+                        count++;
+                        totalPrice = item.Price * item.Count;
+                        <tbody class="align-middle">
+                            <tr>
+                                <td class="align-middle">@count</td>
+                                <td class="align-middle">@item.ProductName</td>
+                                <td class="align-middle">@item.Count</td>
+                                <td class="align-middle">@item.Price</td>
+                                <td class="align-middle">@totalPrice.ToString("0.00")</td>
+                                <td class="align-middle btn-delete"><a class="btn btn-sm btn-danger" href="@Url.Action("DeleteBasket","Baskets", new { id = item.BasketID })"><i class="fa fa-times"></i></a></td>
+                            </tr>
+                        </tbody>
                     }
                 </table>
             </div>
@@ -76,21 +79,22 @@
                     <div id="container" class="border-bottom pb-2">
                         <div class="d-flex justify-content-between mb-3">
                             <h6>Toplam Tutar</h6>
-                            <h6><span id="totalprice">200</span>₺</h6>
+                            <h6><span id="totalprice">@basketTotalPrice</span>₺</h6>
                         </div>
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-medium">Kdv Oranı</h6>
-                            <h6 id="kdv" class="font-weight-medium">20</>₺</h6>
+                            <h6 id="kdv" class="font-weight-medium">@tax</>₺</h6>
                         </div>
                         <br />
                     </div>
                     <div class="pt-2">
                         <div class="d-flex justify-content-between mt-2">
                             <h5>Toplam Tutar</h5>
-                            <h5><span id="totalpricewithkdv">220</span>₺</h5>
+                            <h5><span id="totalpricewithkdv">@basketTotalPriceWithTax</span>₺</h5>
                         </div>
                     </div>
                     <br />
+                    <button id="btnchecked" class="btn btn-block btn-warning font-weight-bold my-3">Siparişi Tamamla</button>
                 </div>
             </div>
         </div>
