--- a/SignalRWebUI/Views/Baskets/Index.cshtml
+++ b/SignalRWebUI/Views/Baskets/Index.cshtml
@@ -2,8 +2,8 @@
 @{
     Layout = null;
     int count = 0;
-    decimal basketTotalPrice=0;
-    decimal basketTotalPriceWithTax=0;
+    decimal basketTotalPrice = 0;
+    decimal basketTotalPriceWithTax = 0;
     decimal tax = 0;
     decimal totalPrice = 0;
 }
@@ -58,7 +58,9 @@
                                 <td class="align-middle">@item.Count</td>
                                 <td class="align-middle">@item.Price</td>
                                 <td class="align-middle">@totalPrice.ToString("0.00")</td>
-                                <td class="align-middle btn-delete"><a class="btn btn-sm btn-danger" href="@Url.Action("DeleteBasket","Baskets", new { id = item.BasketID })"><i class="fa fa-times"></i></a></td>
+                                <td class="align-middle btn-delete"><a class="btn btn-sm btn-danger"
+                                        href="@Url.Action("DeleteBasket", "Baskets", new { id = item.BasketID })"><i
+                                            class="fa fa-times"></i></a></td>
                             </tr>
                         </tbody>
                     }
@@ -67,14 +69,17 @@
             <div class="col-log-4">
                 <form>
                     <div class="input-group">
-                        <input type="text" id="couponcode" class="form-control border-1 p-4" placeholder="Kupon Kodunuz" />
+                        <input type="text" id="couponcode" class="form-control border-1 p-4"
+                            placeholder="Kupon Kodunuz" />
                         <div>
-                            <a style="height: 48px; padding-top: 11px; margin-left:5px;" class="btn btn-warning" id="btncouponcode">Kuponu Uygula</a>
+                            <a style="height: 48px; padding-top: 11px; margin-left:5px;" class="btn btn-warning"
+                                id="btncouponcode">Kuponu Uygula</a>
                         </div>
                     </div>
                 </form>
                 <br />
-                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-warning pr-3">Sepet Özeti</span></h5>
+                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-warning pr-3">Sepet
+                        Özeti</span></h5>
                 <div class="bg-light p-30 mb-5">
                     <div id="container" class="border-bottom pb-2">
                         <div class="d-flex justify-content-between mb-3">
@@ -94,7 +99,8 @@
                         </div>
                     </div>
                     <br />
-                    <button id="btnchecked" class="btn btn-block btn-warning font-weight-bold my-3">Siparişi Tamamla</button>
+                    <button id="btnchecked" class="btn btn-block btn-warning font-weight-bold my-3">Siparişi
+                        Tamamla</button>
                 </div>
             </div>
         </div>
@@ -107,4 +113,3 @@
 </body>
 
 </html>
-
