--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -1,56 +1,83 @@
 ﻿@model List<ResultBookingDto>
 @{
-	ViewData["Title"] = "Index";
-	Layout = "~/Views/AdminLayout/Index.cshtml";
-    int count = 0;  //aradan rezervasyon kaldırdığımızda kalınan yerden gidilmesi için sayacı tanımlıyoruz
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
+    //int count = 0;  //aradan rezervasyon kaldırdığımızda kalınan yerden gidilmesi için sayacı tanımlıyoruz
 }
 
-<div class="content">
-	<div class="container-fluid">
-		<h4 class="page-title">Rezervasyon İşlemleri</h4>
-		<div class="row">
-			<div class="col-md-12">
-				<div class="card">
-					<div class="card-header">
-						<div class="card-title">Rezervasyon Listesi</div>
-					</div>
-					<div class="card-body">
-						<div class="card-sub">
-							Rezervasyon ile ilgili işlemleri aşağıda gerçekleştirebilirsiniz.
-						</div>
-						<table class="table mt-3">
-							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">Ad Soyad</th>
-									<th scope="col">Telefon</th>
-									<th scope="col">Kişi Sayısı</th>
-									<th scope="col">Rezervasyon Durumu</th>
-									<th scope="col">Sil</th>
-									<th scope="col">Güncelle</th>
-								</tr>
-							</thead>
-							<tbody>
-								@foreach (var item in Model)
-								{ 
-                                    count++;
-									<tr>
-										<td>@count</td>
-										<td>@item.Name</td>
-										<td>@item.Phone</td>
-										<td>@item.PersonCount</td>
-										<td>Rezervasyon Alındı</td>
-										<td><a href="/Booking/DeleteBooking/@item.BookingID" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="/Booking/UpdateBooking/@item.BookingID" class="btn btn-outline-success">Güncelle</a></td>
-									</tr>
-								}
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
 
-							</tbody>
-						</table>
-						<a href="/Booking/CreateBooking/" class="btn btn-outline-primary">Yeni Rezervasyon Girişi</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="content">
+    <div class="container-fluid">
+
+        <script type="text/javascript">
+
+            $(document).ready(() => {
+
+                var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:7017/SignalRHub").build();
+                $("#connstatus").text(connection.state);
+                connection.start().then(() => {
+                    $("#connstatus").text(connection.state);
+                    setInterval(() => {
+                        connection.invoke("GetBookingList");
+                    }, 1000);
+
+                }).catch((err) => { console.log(err) });
+
+                connection.on("ReceiveBookingList", (value) => {
+                    console.log(value);
+                    let tablehtml =`<table class=table mt-3><thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Ad Soyad</th>
+                                    <th scope="col">Telefon</th>
+                                    <th scope="col">Kişi Sayısı</th>
+                                    <th scope="col">Rezervasyon Durumu</th>
+                                    <th scope="col">Sil</th>
+                                    <th scope="col">Güncelle</th>
+                                </tr>
+                            </thead>
+                            <tbody>`
+                    $.each(value,(index,item) => {
+                        tablehtml += `<tr>
+                                    <td>${item.bookingID}</td>
+                                    <td>${item.name}</td>
+                                    <td>${item.phone}</td>
+                                    <td>${item.personCount}</td>
+                                    <td>${"Rezervasyon Alındı"}</td>
+                                    <td><a href="/Booking/DeleteBooking/${item.bookingID}" class="btn btn-outline-danger">Sil</a></td>
+                                   <td><a href="/Booking/UpdateBooking/${item.bookingID}" class="btn btn-outline-success">Güncelle</a></td>
+                                    </tr>`
+                        });
+                    tablehtml+="</tbody></table>";
+                    $("#bookingList").html(tablehtml);
+                });
+            });
+
+        </script>
+
+        <h4 class="page-title">Rezervasyon İşlemleri</h4>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title">Rezervasyon Listesi</div>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-sub">
+                            Rezervasyon ile ilgili işlemleri aşağıda gerçekleştirebilirsiniz.
+                        </div>
+
+                        <div id="bookingList"></div>
+
+                        <a href="/Booking/CreateBooking/" class="btn btn-outline-primary">Yeni Rezervasyon Girişi</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
