--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -12,5 +12,7 @@
 @using SignalRWebUI.Dtos.SliderDtos
 @using SignalRWebUI.Dtos.BasketDtos
 @using SignalRWebUI.Dtos.NotificationDtos
+@using SignalRWebUI.Dtos.MenuTabeDtos
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
