masaya göre qr code işlemleri

--- a/SignalRWebUI/Views/Menu/Index.cshtml
+++ b/SignalRWebUI/Views/Menu/Index.cshtml
@@ -20,16 +20,8 @@
                 </h2>
             </div>
 
-            <ul class="filters_menu">
-                <li class="active" data-filter="*">Tüm Ürünler</li>
-                <li data-filter=".burger">Hamburger</li>
-                <li data-filter=".pizza">Pizza</li>
-                <li data-filter=".pasta">Makarna</li>
-                <li data-filter=".fries">Kızartmalar</li>
-                <li data-filter=".fries">Salatalar</li>
-                <li data-filter=".fries">İçecekler</li>
-                <li data-filter=".fries">Tatlılar</li>
-            </ul>
+            @await Component.InvokeAsync("_MenuCategoryFilterComponentPartial")
+
 
             <div class="filters-content">
                 <div class="row grid">
@@ -52,7 +44,8 @@
                                             <h6>
                                                 @item.Price₺
                                             </h6>
-                                            <a href="#" onclick="showproductid(@item.ProductID)">
+                                            <a href="#" onclick="showproductid(@item.ProductID, @ViewBag.v)">
+                                            @* <a href="#" onclick="showproductid(@item.ProductID)"> *@
                                                 @* <a href="#" onclick="showproductid(@item.ProductID, '@item.ProductName')">  @* kodu çalıştıramadıkkk------- tekrar bak  *@
                                                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                                                 <g>
@@ -116,8 +109,8 @@
                 </div>
             </div>
             <div class="btn-box">
-                <a href="">
-                    Daha Fazlası
+                <a href="/Baskets/Index/">
+                    Sepete Git
                 </a>
             </div>
         </div>
@@ -146,22 +139,24 @@
             });
         }
     </script> *@
-
     <script>
-        function showproductid(value)
-        {
-            var id = value;
-            $.ajax({
-            type: 'post',
-            data: { item: id },
-            url: "/Menu/AddBasket/" +id,
-            contentType: 'json',
-            success: function () {
-                 swal("Seçilen Ürün ID:" + id, "Seçiminizi Yaptınız!", "success");
-                }
-            });
-        }
-    </script> 
+    function showproductid(productId, menuTableId) {
+    $.ajax({
+    type: 'POST',
+    url: "/Menu/AddBasket",
+    data: {
+    id: productId,
+    menuTableId: menuTableId // MenuTableId burada gönderiliyor
+    },
+    success: function () {
+    swal("Seçilen Ürün ID:" + productId, "Seçtiğiniz Ürün Sepete Eklendi!", "success");
+    },
+    error: function (xhr, status, error) {
+    console.error("Hata:", error);
+    console.log("Yanıt:", xhr.responseText);
+    }
+    });
+    };
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
