--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -144,6 +144,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/Mail/Index/">
+                    <i class="la la-fonticons"></i>
+                    <p>Mail İşlemleri</p>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/ProgressBars/Index/">
                     <i class="la la-fonticons"></i>
                     <p>Anlık Durum Çubuğu</p>
@@ -153,6 +159,24 @@
                 <a href="/Setting/Index/">
                     <i class="la la-fonticons"></i>
                     <p>Ayarlar</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/QRCode/Index/">
+                    <i class="la la-qrcode"></i>
+                    <p>QR Kod Oluşturma Sayfası</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Setting/Index/">
+                    <i class="la la-fonticons"></i>
+                    <p>Ayarlar</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/Login/LogOut/">
+                    <i class="la la-fonticons"></i>
+                    <p>Çıkış Yap</p>
                 </a>
             </li>
             <li class="nav-item">
