--- a/SignalRWebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -6,9 +6,9 @@
     <header class="header_section">
         <div class="container">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/Default/Index/">
                     <span>
-                        SignalR
+                        MK Restoran
                     </span>
                 </a>
 
@@ -25,7 +25,7 @@
                             <a class="nav-link" href="/Menu/Index/">Menü</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/AboutUI/Index/">Hakkımızda</a>
+                            <a class="nav-link" href="/FoodRapidApi/Index/">Tarifler</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/BookATable/Index/">Rezervasyon Yap <span class="sr-only">(current)</span> </a>
