--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -14,6 +14,9 @@
 @using SignalRWebUI.Dtos.NotificationDtos
 @using SignalRWebUI.Dtos.MenuTabeDtos
 @using SignalRWebUI.Dtos.IdentityDtos
+@using SignalRWebUI.Dtos.MessageDtos
+@using SignalRWebUI.Dtos.MailDtos
+@using SignalRWebUI.Dtos.RapidApiDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
